--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ requests==2.26.0
 pymongo==3.12.1
 python-dotenv==0.19.2
 pytz==2021.3
+google-cloud-translate==3.6.1
+six==1.16.0
+google-api-python-client==2.33.0
