--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 beautifulsoup4==4.10.0
-requests==2.26.0
-# nltk==3.6.5
+# requests==2.26.0
+nltk==3.6.5
 pymongo==3.12.1
 python-dotenv==0.19.2
 pytz==2021.3
 google-cloud-translate==3.6.1
 six==1.16.0
 google-api-python-client==2.33.0
+gunicorn==20.1.0
+Flask==2.0.2
