동시실행, 최대 인스턴스 개수 수정

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,6 +28,8 @@ steps:
       - '--quiet'
       - '--cpu=1'
       - '--memory=512Mi'
+      - '--concurrency=1'
+      - '--max-instances=1000'
     id: Deploy
     entrypoint: gcloud
 images:
