--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,6 +31,7 @@ steps:
       - '--memory=512Mi'
       - '--concurrency=1'
       - '--max-instances=1000'
+      - '--timeout=360'
     id: Deploy
     entrypoint: gcloud
 images:
