--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ google-auth==1.35.0
 google-auth-httplib2==0.1.0
 google-cloud-core==1.7.2
 google-cloud-storage==1.41.1
+google-cloud-translate==3.6.1
 google-crc32c==1.3.0
 google-resumable-media==2.1.0
 googleapis-common-protos==1.54.0
@@ -35,10 +36,10 @@ Jinja2==3.0.3
 joblib==1.1.0
 MarkupSafe==2.0.1
 Naked==0.1.31
-nltk
+nltk==3.6.5
 numpy==1.22.1
-pandas
 packaging==21.3
+pandas==1.3.5
 Pillow==9.0.0
 proto-plus==1.19.8
 protobuf==3.19.1
@@ -48,8 +49,9 @@ pycparser==2.21
 pyflakes==2.4.0
 pymongo==3.12.1
 pyparsing==3.0.6
+python-dateutil==2.8.2
 python-dotenv==0.19.2
-pytorch_pretrained_bert
+pytorch-pretrained-bert==0.6.2
 pytz==2021.3
 PyYAML==6.0
 regex==2021.11.10
