--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,7 +28,7 @@ steps:
       - '--region=$_DEPLOY_REGION'
       - '--quiet'
       - '--cpu=2'
-      - '--memory=512Mi'
+      - '--memory=1Gi'
       - '--concurrency=1'
       - '--max-instances=1000'
       - '--timeout=360'
