--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ google-resumable-media==2.1.0
 googleapis-common-protos==1.54.0
 grpcio==1.43.0
 grpcio-status==1.43.0
+gunicorn==20.1.0
 # h11==0.9.0
 # h2==3.2.0
 # hpack==3.0.0
