--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
       - '--concurrency=1'
       - '--max-instances=1000'
       - '--timeout=360'
+      - '--port=8080'
     id: Deploy
     entrypoint: gcloud
 images:
