--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-api-python-client==2.33.0
 google-auth==1.35.0
 google-auth-httplib2==0.1.0
 google-cloud-core==1.7.2
+google-cloud-logging==2.3.1
 google-cloud-storage==1.41.1
 google-cloud-translate==3.6.1
 google-crc32c==1.3.0
