--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ charset-normalizer==2.0.9
 click==8.0.3
 cryptography==36.0.1
 filelock==3.4.2
-Flask==2.0.2
 gdown==4.1.1
 google-api-core==1.31.5
 google-api-python-client==2.33.0
@@ -57,7 +56,7 @@ pytorch-pretrained-bert==0.6.2
 pytz==2021.3
 PyYAML==6.0
 regex==2021.11.10
-requests==2.26.0
+requests==2.27.1
 # rfc3986==1.5.0
 rsa==4.8
 sacremoses==0.0.47
@@ -75,4 +74,4 @@ transformers==4.15.0
 typing_extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.26.7
-Werkzeug==2.0.2
+functions-framework==3.0.0
