--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,6 +33,7 @@ steps:
       - '--max-instances=10'
       - '--timeout=360'
       - '--port=8080'
+      - '--allow-unauthenticated'
     id: Deploy
     entrypoint: gcloud
 images:
